Fixed a problem with iPhone overflow

--- a/grunt-compiled/sass/styles.sass
+++ b/grunt-compiled/sass/styles.sass
@@ -150,6 +150,7 @@ body
             border-bottom-left-radius: 10px
             border-bottom-right-radius: 10px
             padding: 15px
+            overflow-x: scroll
             table
                 width: 840px
                 color: black
@@ -163,6 +164,7 @@ body
                     padding: 10px
                     height: 25px
                     line-height: 25px
+                    word-wrap: break-word
                     &.file-type
                         font-size: 25px
                         text-align: center
